# pixelbru.sh

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  Dioxus.toml  Makefile  README.md  biome.json  bun.lockb  flake.nix  next.config.ts  nyxbui.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  wrangler.toml
app/: actions.ts  globals.css  layout.tsx  page.tsx  providers.tsx
app/api/contact/: route.ts
assets/: main.css
components/pb/: contact-form.tsx  contact.tsx  cv.tsx  footer.tsx  hero.tsx  logo.tsx  projects-bento.tsx  projects.tsx  skills-cloud.tsx  skills-marquee.tsx
components/ui/: animated-beam.tsx  animated-gradient-text.tsx  animated-grid-pattern.tsx  animated-list.tsx  avatar.tsx  badge.tsx  bento-grid.tsx  blur-fade.tsx  border-beam.tsx  box-reveal.tsx  button.tsx  command.tsx  dialog.tsx  dock.tsx  flickering-grid.tsx  form.tsx  hover-card.tsx  icon-cloud.tsx  input.tsx  label.tsx  magic-card.tsx  marquee.tsx  meteors.tsx  navigation-menu.tsx  orbiting-circles.tsx  particles.tsx  pulsating-button.tsx  rainbow-button.tsx  shine-border.tsx  skeleton.tsx  textarea.tsx  timeline.tsx  toast.tsx  toaster.tsx  typing-animation.tsx  word-fade-in.tsx  word-pull-up.tsx  word-rotate.tsx
functions/api/: contact.ts
hooks/: use-toast.ts
lib/: utils.ts
src/: main.rs
src/components/: contact.rs  icons.rs  landing.rs  mod.rs  projects.rs  skills.rs
