[package]
name = "pixelbrush-portfolio"
version = "0.1.0"
authors = ["danruto <danny@pixelbru.sh>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
manganis = "0.2.2"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
