[package]
name = "pixelbrush-portfolio"
version = "0.1.0"
authors = ["danruto <danny@pixelbru.sh>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5", features = ["ssr", "router"] }

log = "0.4.19"
dioxus-logger = "0.4.1"
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
dioxus-ssr = "0.5.6"

[features]
default = []
